clusters/homelab-flex-a1/apps/nginx/service.yaml
kind: Service
apiVersion: v1
metadata:
    name: nginx-service
    namespace: default
spec:
    selector:
        app: nginx-service
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: LoadBalancer
