clusters/homelab-flex-a1/apps/nginx/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: nginx-ingress
    namespace: default
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`nginx.test.frankoslaw.top`)
          kind: Rule
          services:
              - name: nginx-service
                port: http
    tls:
        certResolver: letsencrypt-staging
        domains:
            - main: nginx.test.frankoslaw.top
        secretName: nginx.test.frankoslaw.top
